fixed landing page spacing for desktop and mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,14 +21,15 @@
 
 body {
 	display: grid;
-	grid-template-rows: 1fr 6fr 0.5fr;
+	grid-template-rows: 1fr 3fr 0.5fr;
+	grid-template-columns: 1fr;
 	background-color: #EAE2B7;
 	color: #003049;
 }
 
 #banner {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	box-shadow: 1px 1px 5px 2px #003049;
 	padding: 0.5rem;
 	background-color: #003049;
@@ -94,6 +95,8 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	padding: 20px;
+	align-self: end;
 	border-top: 2px solid black;
 	letter-spacing: 3px;
 }
